--- a/hellomaven/.classpath
+++ b/hellomaven/.classpath
@@ -22,15 +22,53 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/collections-generic-4.01.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/colt-1.2.0.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/concurrent-1.3.4.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/j3d-core-1.3.1.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-3d-2.0.1.jar" sourcepath="F:/大四/毕业设计/java绘图/jung2-2_0_1-sources/jung-3d-2.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-3d-demos-2.0.1.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-algorithms-2.0.1.jar" sourcepath="F:/大四/毕业设计/java绘图/jung2-2_0_1-sources/jung-algorithms-2.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-graph-impl-2.0.1.jar" sourcepath="F:/大四/毕业设计/java绘图/jung2-2_0_1-sources/jung-graph-impl-2.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-io-2.0.1.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-jai-2.0.1.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-jai-samples-2.0.1.jar" sourcepath="F:/大四/毕业设计/java绘图/jung2-2_0_1-sources/jung-jai-samples-2.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-samples-2.0.1.jar" sourcepath="F:/大四/毕业设计/java绘图/jung2-2_0_1-sources/jung-samples-2.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/jung-visualization-2.0.1.jar" sourcepath="F:/大四/毕业设计/java绘图/jung2-2_0_1-sources/jung-visualization-2.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/vecmath-1.3.1.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/jung2-2_0_1/wstx-asl-3.2.6.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-anim-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-awt-util-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-bridge-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-codec-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-css-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-dom-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-ext-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-extension-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-gui-util-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-gvt-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-parser-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-script-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-svg-dom-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-svggen-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-swing-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-transcoder-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-util-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/batik-xml-1.8.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/fop-transcoder-allinone-1.1.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/js.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/xalan-2.7.0.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/xerces_2_5_0.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/xml-apis-1.3.04.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry kind="lib" path="F:/大四/毕业设计/java绘图/batik-bin-1.8/batik-1.8/lib/xmlgraphics-commons-2.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
