--- a/hellomaven/pom.xml
+++ b/hellomaven/pom.xml
@@ -12,5 +12,15 @@
           <version>4.10</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+      	  <groupId>org.apache.commons</groupId>
+  		  <artifactId>commons-lang3</artifactId>
+  		  <version>3.4</version>
+      </dependency>
+      <dependency>
+      	  <groupId>log4j</groupId> 
+      	  <artifactId>log4j</artifactId>
+      	  <version>1.2.9</version>
+      </dependency>
   </dependencies>
 </project>
